rbac/ing-web-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-auth
  namespace: default
  resourceVersion: "814"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-auth
  template:
    metadata:
      labels:
        app: web-auth
    spec:
      containers:
      - image: nginx:1.19.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-auth
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-auth
  type: ClusterIP
